--- a/COMP229-f2016-Lesson8/Views/Shared/_LoginPartial.cshtml
+++ b/COMP229-f2016-Lesson8/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li><a href="@Url.Action("Register","Account", new { id = "registerLink" })"><i class="fa fa-user-plus fa-lg"></i> Register</a></li>
+        <li><a href="@Url.Action("Login","Account", new { id = "loginLink" })"><i class="fa fa-user fa-lg"></i> Login</a></li>
     </ul>
 }
