--- a/COMP229-f2016-Lesson8/Views/Shared/_Layout.cshtml
+++ b/COMP229-f2016-Lesson8/Views/Shared/_Layout.cshtml
@@ -25,7 +25,15 @@
                     <li><a href="@Url.Action("About","Home")"><i class="fa fa-info fa-lg"></i> About</a></li>
                     <li><a href="@Url.Action("Contact","Home")"><i class="fa fa-phone fa-lg"></i> Contact</a></li>
                 </ul>
+
                 @Html.Partial("_LoginPartial")
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="@Url.Action("Index","Albums")"><i class="fa fa-folder fa-lg"></i> Album</a></li>
+                    <li><a href="@Url.Action("Index","Genres")"><i class="fa fa-list fa-lg"></i> Genre</a></li>
+                    <li><a href="@Url.Action("Index","Artists")"><i class="fa fa-users fa-lg"></i> Artist</a></li>
+                </ul>
+                
             </div>
         </div>
     </div>
